--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ pipeline:
       - mvn package
       - cp /build/target/boot-sample-0.0.1-SNAPSHOT.war /build
     mount:
-      - ./target
+      - /build/target
     when:
       branch: [ master, develop ]
       event: push
@@ -20,7 +20,7 @@ pipeline:
     image: drillster/drone-volume-cache
     rebuild: true
     mount:
-      - ./target
+      - /build/target
     ttl: 7
     when:
       branch: [ master, develop ]
@@ -30,7 +30,7 @@ pipeline:
     image: plugins/docker
     dockerfile: Dockerfile
     mount:
-      - ./target
+      - /build/target
     when:
       branch: [ master, develop ]
       event: push
