--- a/.drone.yml
+++ b/.drone.yml
@@ -35,9 +35,7 @@ pipeline:
     mount:
       - /build/target
     auto_tag: true
-    insecure: true
-    repo: localhost:5000/spring/boot-sample
-    registry: localhost:5000
+    repo: hikaruright/spring-test
     when:
       branch: [ master, develop ]
       event: push
